--- a/style.css
+++ b/style.css
@@ -699,8 +699,7 @@ footer a:hover {
     }
 
     .booking-img img {
-        height: auto;
-        width: 100%;
+        display: none;
     }
 
     .booking-content {
@@ -758,5 +757,9 @@ footer a:hover {
 
     .hero {
         height: 200px;
+    }
+
+    .booking-img img {
+        display: none;
     }
 }
