--- a/style.css
+++ b/style.css
@@ -557,6 +557,11 @@ footer a:hover {
         width: 100%;
     }
 
+    .map .content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 
     .map .image img {
         width: 60%;
