--- a/style.css
+++ b/style.css
@@ -629,6 +629,12 @@ footer a:hover {
         padding: 10%;
     }
 
+    .map .content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
 
 
 }
