--- a/style.css
+++ b/style.css
@@ -401,7 +401,7 @@ input[type="submit"]:focus {
 }
 
 .team .image-team img {
-    width: 150%;
+    width: 180%;
 
 
 }
@@ -425,6 +425,7 @@ input[type="submit"]:focus {
     font-size: 18px;
     color: #555;
     line-height: 1.6;
+    padding: 5%;
 }
 
 .hero video {
