--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ input[type="submit"]:focus {
 .team .content-team {
     display: flex;
     max-width: 1000px;
-    margin: 100px;
+    margin-left: 100px;
     margin-top: 100px;
     font-family: "Rubik", serif;
     margin-bottom: 150px;
