--- a/style.css
+++ b/style.css
@@ -392,13 +392,16 @@ input[type="submit"]:focus {
 }
 
 .team {
-    display: flex;
     margin-left: 100px;
     margin-top: 100px;
-    font-family: "Rubik", serif;
     margin-bottom: 150px;
 }
 
+.team .content-team {
+    display: flex;
+    max-width: 600px;
+    font-family: "Rubik", serif;
+}
 
 .team .image-team img {
     width: 200%;
