--- a/style.css
+++ b/style.css
@@ -403,8 +403,8 @@ input[type="submit"]:focus {
     font-family: "Rubik", serif;
 }
 
-.team .image-team img {
-    width: 200%;
+.image-team img {
+    width: 100%;
     height: auto;
 }
 
