--- a/style.css
+++ b/style.css
@@ -575,6 +575,12 @@ footer a:hover {
         width: 100%;
     }
 
+    .map .content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
     .map .image img {
         width: 60%;
     }
@@ -599,11 +605,6 @@ footer a:hover {
         padding: 10%;
     }
 
-    .team .content-team {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
 
     .trees h1.trees-text {
         font-size: 150%;
@@ -688,40 +689,6 @@ footer a:hover {
         line-height: 100%;
     }
 
-    /* 
-    .team {
-        margin-left: 20px;
-        margin-right: 20px;
-        margin-top: 50px;
-        margin-bottom: 50px;
-    }
-
-    .team .text-team {
-        padding: 0 15px;
-    }
-
-    .team .text-team h1 {
-        font-size: 2rem;
-        line-height: 1.3;
-    }
-
-    .team .text-team p {
-        font-size: 1rem;
-    }
-
-    .team .row {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .team .col-md-6 {
-        flex: 1;
-    }
-
-    .team .text-team {
-        text-align: center;
-    } */
-
     .trees h1.trees-text {
         font-size: 120%;
     }
@@ -734,12 +701,6 @@ footer a:hover {
         width: 80%;
         margin-left: 20px;
     }
-
-    /* .content-team {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    } */
 
     .booking-img img {
         display: none;
