--- a/style.css
+++ b/style.css
@@ -12,28 +12,29 @@ body {
     background-color: #FBFAF8;
 }
 
-.hamburger.open span:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-}
-
-.hamburger.open span:nth-child(2) {
-    opacity: 0;
-}
-
-.hamburger.open span:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
-}
-
 .menu-container {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #FBFAF8;
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid #ccc;
+}
+
+/* When menu is active */
+.menu-container.active {
     display: flex;
 }
 
+/* Hamburger Menu */
 .hamburger {
     display: none;
+    /* Hidden by default */
     flex-direction: column;
     gap: 5px;
-    background: none;
-    border: none;
     cursor: pointer;
 }
 
@@ -41,8 +42,8 @@ body {
     display: block;
     width: 25px;
     height: 3px;
-    background: #333;
-    transition: all 0.3s ease;
+    background-color: #333;
+    border-radius: 2px;
 }
 
 .nav {
@@ -688,29 +689,17 @@ footer a:hover {
 
 @media (max-width: 768px) {
 
-    .menu-container {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 110px;
-        right: 0;
-        background-color: #FBFAF8;
-        width: 100%;
-        padding: 10px 0;
-    }
-
-    .menu-container.active {
-        display: flex;
-    }
-
     .hamburger {
         display: flex;
     }
 
-    ul.menu {
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
+    .menu-container {
+        display: none;
+        /* Initially hidden */
+    }
+
+    .menu-container.active {
+        display: flex;
     }
 
     .nav ul {
