--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    background-color: #6729ac;
+    background-color: #1a1b1cc0;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -46,17 +46,31 @@ body {
     font-size: 36px;
 }
 
+.side-menu,
+.menu-icon {
+    display: none;
+}
+
 
 /* Hide Default Links on Smaller Screens */
 @media screen and (max-width: 768px) {
-    .nav-links {
-        display: none;
-    }
-
     .menu-icon {
         display: block;
+        /* Show menu icon */
         font-size: 24px;
         cursor: pointer;
+    }
+
+    .side-menu {
+        display: block;
+        /* Sidebar menu is ready to be toggled */
+        width: 0;
+        /* Initially hidden */
+    }
+
+    .nav-links {
+        display: none;
+        /* Hide default navigation links */
     }
 }
 
