--- a/style.css
+++ b/style.css
@@ -73,6 +73,17 @@ body {
         display: none;
         /* Hide default navigation links */
     }
+
+    .side-menu a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: white;
+        display: block;
+        transition: 0.3s;
+        text-align: center;
+    }
+
 }
 
 .nav {
