--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
         /* Show menu icon */
         font-size: 24px;
         cursor: pointer;
+        color: #FBFAF8;
     }
 
     .side-menu {
