--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ body {
         /* Hide default navigation links */
     }
 
+    .nav ul {
+        flex-direction: column;
+        gap: 10px;
+    }
 
 }
 
