--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    background-color: #1A1B1C;
+    background-color: #FBFAF8;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
