--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     height: 100%;
     width: 0;
     position: fixed;
+    z-index: 9999;
     top: 0;
     right: 0;
     background-color: #FBFAF8;
@@ -532,6 +533,7 @@ input[type="submit"]:focus {
 .videooverlay::after {
     content: "";
     position: absolute;
+    z-index: 1000;
     left: 0;
     width: 100%;
     height: 100%;
